set(QT_USE_QTOPENGL TRUE)

include(${QT_USE_FILE})

ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)

include_directories(${OPENBABEL2_INCLUDE_DIR} 
	${EIGEN_INCLUDE_DIR} 
	${AVOGADRO_INCLUDE_DIR} 
	../
)

link_directories(../)

set(selectrotate_SRCS
	selectrotate.cpp
)

set(draw_SRCS
	draw.cpp
)

qt4_automoc(${selectrotate_SRCS} ${draw_SRCS})

ADD_LIBRARY(selectrotate SHARED ${selectrotate_SRCS})
TARGET_LINK_LIBRARIES(selectrotate ${OPENBABEL2_LIBRARIES} ${QT_LIBRARIES} ${AVOGADRO_LIBRARIES})
INSTALL(TARGETS selectrotate DESTINATION lib/avogadro)

ADD_LIBRARY(draw SHARED ${draw_SRCS})
TARGET_LINK_LIBRARIES(draw ${OPENBABEL2_LIBRARIES} ${QT_LIBRARIES} ${AVOGADRO_LIBRARIES})
INSTALL(TARGETS draw DESTINATION lib/avogadro)
